Restyle Card borders and shadows, fix how the footer displays on small screens and split the CSS for newer features into their own Sass partials

--- a/css/testing.css
+++ b/css/testing.css
@@ -1,105 +1,3 @@
-/* ************* */
-/* Sticky Header */
-/* ************* */
-
-#header {
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    transition: transform 0.5s;
-    box-shadow: 0 5px 35px rgba(0,0,0,0.1);
-}
-
-.header-bar {
-    background-color: white;
-}
-
-.scroll-down {
-    transform: translate3d(0, -100%, 0);
-}
-
-.scroll-up {
-    transform: none;
-}
-
-/* ****** */
-/* pop-up */
-/* ****** */
-#modal {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 3;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: none;
-    overflow-x: hidden;
-    overflow-y: auto;
-    align-items: center;
-    justify-content: center;
-    padding: 30px;
-}
-#modal.active {
-    display: flex;
-}
-.modal-content {
-    position: relative;
-    background-color: white;
-    margin: auto;
-    width: auto;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0 3px 9px rgb(0, 0, 0 / 50%);
-    border-radius: 5px;
-    background-clip: padding-box;
-    outline: none;
-}
-.modal-header {
-    padding: 15px 20px;
-    border-bottom: 1px solid #e5e5e5;
-}
-.modal-title {
-    margin: 0;
-    line-height: 1.42857143;
-    font-size: 1.625rem;
-}
-.modal-body {
-    padding: 20px;
-}
-.modal-body p {
-    line-height: 1.875rem;
-    margin: 0 0 10px;
-    color: #666;
-}
-.modal-body a {
-    color: #333645;
-}
-.modal-body a:hover {
-    text-decoration: underline;
-}
-.modal-footer {
-    margin: 0;
-    padding: 19px 20px 20px;
-    text-align: right;
-    border-top: 1px solid #e5e5e5;
-}
-.modal-footer .btn {
-    display: block;
-}
-/* Media Queries */
-@media screen and (max-width: 767px) {
-    .spacer {
-        margin-bottom: 30px;
-    }
-}
-@media screen and (min-width: 768px) {
-    .modal-content {
-        width: 600px;
-    }
-}
-
 /* ******* */
 /* Overlay */
 /* ******* */
