--- a/scss/partials/_items.scss
+++ b/scss/partials/_items.scss
@@ -60,6 +60,11 @@
 }
 
 // Card styles
+.card {
+  border: 1px solid #ccc;
+  box-shadow: 0 3px 35px rgba(0,0,0,0.1);
+}
+
 .card hr {
   margin: 0 30px;
 }
