--- a/scss/partials/_sections.scss
+++ b/scss/partials/_sections.scss
@@ -103,6 +103,9 @@ footer {
 
 .outro {
   display: flex;
+  overflow: hidden;
+  padding-top: 8px;
+  margin-top: -8px;
 }
 
 .socials {
